# rust-micro

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUGGING_GUIDE.md  PORT_PLAN.md  README.md  build.rs  build_image.sh  link.ld
.claude/: settings.local.json
build_support/: bf.rs  xml.rs
codegen/: README.md  object-api-arch.xml  refresh.sh
crates/sel4-rt/: Cargo.toml
crates/sel4-rt/src/: lib.rs
rootserver/: Cargo.toml  link.ld  triplet.json
rootserver/src/: main.rs  microtest.rs
scripts/: build_kernel.sh  fetch_reactos.sh  gen_reactos_imports.py  make_image.sh  run-gdb.sh  run_specs.sh
sel4-user-ring/: Cargo.toml  README.md
sel4-user-ring/crates/surt-abi/: Cargo.toml
sel4-user-ring/crates/surt-abi/src/: lib.rs
sel4-user-ring/crates/surt-core/: Cargo.toml
sel4-user-ring/crates/surt-core/src/: buffer.rs  error.rs  lib.rs  notify.rs  ring.rs
sel4-user-ring/crates/surt-core/tests/: notify.rs  stress.rs
sel4-user-ring/docs/architecture/: surt_sel4_binding.md
sel4-user-ring/tasks/: todo.md
sel4-user-ring/tools/surt-bench/: Cargo.toml
sel4-user-ring/tools/surt-bench/src/: main.rs
src/: arch.rs  boot.rs  bootboot.rs  cap.rs  cspace.rs  cte.rs  elf.rs  endpoint.rs  error.rs  fastpath.rs  fault.rs  fpu.rs  initrd.rs  interrupt.rs  invocation.rs  ipc_buffer.rs  kernel.rs  main.rs  notification.rs  object_type.rs  region.rs  reply.rs  rootserver.rs  rootserver_image.rs  sched_context.rs  scheduler.rs  smp.rs  spec.rs  structures.rs  syscall_handler.rs  syscalls.rs  tcb.rs  types.rs  untyped.rs  vcpu.rs  vspace.rs
src/arch/: aarch64.rs  x86_64.rs
src/arch/aarch64/: cpu.rs  exceptions.rs  interrupts.rs  qemu.rs  serial.rs
src/arch/x86_64/: acpi.rs  context.rs  cpu.rs  debug.rs  exceptions.rs  fpu_ctx.rs  gdt.rs  interrupts.rs  ioapic.rs  iommu.rs  lapic.rs  msr.rs  paging.rs  pic.rs  pit.rs  qemu.rs  serial.rs  syscall_entry.rs  usermode.rs  vspace.rs
src/spec/: abi_layout_tests.rs  arch_tests.rs  integration_tests.rs  structures_tests.rs
tasks/: lessons.md  sc-donation-wip.patch  sel4test_abi_audit.md  sel4test_bringup_plan.md  todo.md
triplets/: mykernel-x86.json
