[package]
name = "rootserver"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Phase 34a — replace the rootserver demos with the structured
# microtest harness. Each test is one fn that prints `✓ name`
# or `✗ name: reason`; the kernel's exit hook watches for
# `[microtest done]` and qemu_exits.
microtest = []

[dependencies]
# SURT user-space ring transport. `core`-only (no_std, no alloc), so it builds
# under the rootserver's `-Z build-std=core`. Re-exports `surt-abi`.
surt-core = { path = "../sel4-user-ring/crates/surt-core", default-features = false }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
codegen-units = 1
overflow-checks = false

[profile.dev]
panic = "abort"
