[package]
name = "rootserver"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Phase 34a — replace the rootserver demos with the structured
# microtest harness. Each test is one fn that prints `✓ name`
# or `✗ name: reason`; the kernel's exit hook watches for
# `[microtest done]` and qemu_exits.
microtest = []

# No external dependencies — the SURT ring transport moved to its own repo
# (crates.io: surt-sel4); its on-kernel demo lives in vendor/surt-demo/.
[dependencies]

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
codegen-units = 1
overflow-checks = false

[profile.dev]
panic = "abort"
