[package]
name = "rootserver"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Phase 34a — replace the rootserver demos with the structured
# microtest harness. Each test is one fn that prints `✓ name`
# or `✗ name: reason`; the kernel's exit hook watches for
# `[microtest done]` and qemu_exits.
microtest = []

[dependencies]
# The kernel's shared user-space ABI (syscalls, invocation helpers, BootInfo).
sel4-rt = { path = "../crates/sel4-rt" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
codegen-units = 1
overflow-checks = false

[profile.dev]
panic = "abort"
