[workspace]
resolver = "2"
members = ["crates/surt-abi", "crates/surt-core", "tools/surt-bench"]

# Crates are added per-milestone:
#   surt-core  (M2)  host-testable SPSC ring  ✅
#   surt-sel4  (M7)  seL4 binding
#   surt-host        host test runtime
#   surt-trace       optional tracing
#   surt-fuzz        fuzz targets

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.77"

[profile.release]
# Ring transport is a hot path; favour predictable codegen.
opt-level = 3
overflow-checks = true
