[package]
name = "surt-bench"
description = "Host benchmarks for the SURT ring transport (throughput, round-trip latency, wakeup policy)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "surt-bench"
path = "src/main.rs"

[dependencies]
surt-core = { path = "../../crates/surt-core" }
